Suporte imagem e ajustes

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Zap</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -13,7 +13,7 @@
         }
         #app {
             width: 100%;
-            height: 100%;
+            height: 100vh;
             background-color: #0B141A;
         }
         .wrapper {
@@ -121,6 +121,14 @@
             background-color: #005C4B;
             margin-left: auto;
         }
+        .msg-img {
+            padding: 0.4em;
+        }
+        .msg > img {
+            width: 100%;
+            aspect-ratio: 1 / 1;
+            border-radius: 4px;
+        }
         .dblcheck {
             opacity: 0.5;
             height: 0.8em;
@@ -198,6 +206,13 @@
                             <div class="chat-box-info"><span>Hoje</span></div>
                             <div class="msg msg-in">
                                 <span>oie</span>
+                                <div>
+                                    <span class="msg-time">12:56</span>
+                                </div>
+                            </div>
+                            <div class="msg msg-in msg-img">
+                                <img src="/img/ovni.jpg">
+                                <span>vai dizer que não acredita</span>
                                 <div>
                                     <span class="msg-time">12:56</span>
                                 </div>
