--- a/index.html
+++ b/index.html
@@ -22,34 +22,7 @@
                             <span class="chat-name">Roberto Luis Trabalho</span>
                         </div>
                         <div class="chat-box">
-                            <div class="chat-box-info"><span>Hoje</span></div>
-                            <div class="msg msg-in">
-                                <span>oie</span>
-                                <div>
-                                    <span class="msg-time">12:56</span>
-                                </div>
-                            </div>
-                            <div class="msg msg-in msg-img">
-                                <img src="/img/ovni.jpg">
-                                <span>vai dizer que não acredita</span>
-                                <div>
-                                    <span class="msg-time">12:56</span>
-                                </div>
-                            </div>
-                            <div class="msg msg-out">
-                                <span>eaí tudo bem?</span>
-                                <div>
-                                    <span class="msg-time">12:56</span>
-                                    <img class="dblcheck" src="/img/dbl-check.svg">
-                                </div>
-                            </div>
-                            <div class="msg msg-out">
-                                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas sed repudiandae officiis facere temporibus placeat dignissimos, amet vero odio fugiat labore! Nisi nemo repellendus ratione nesciunt a voluptate, illum distinctio.</span>
-                                <div>
-                                    <span class="msg-time">12:56</span>
-                                    <img class="dblcheck" src="/img/dbl-check.svg">
-                                </div>
-                            </div>
+                            
                         </div>
                         <div class="chat-actions">
                             <div class="input-trigger">Digite uma mensagem</div>
@@ -71,7 +44,8 @@
 
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.3/jquery.scrollTo.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.3/jquery.scrollTo.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.13.7/underscore-min.js"></script>
     <script src="script.js"></script>
 
 </body>
