image support, start node support

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <div class="chat area">
                         <div class="chat-header">
                             <img class="chat-img" src="/img/perfil.jpg">
-                            <span class="chat-name">Roberto Luis Trabalho</span>
+                            <span class="chat-name">Roberto Luis Tio</span>
                         </div>
                         <div class="chat-box">
                             
