Receive and respond interactions

--- a/index.html
+++ b/index.html
@@ -26,13 +26,7 @@
                         </div>
                         <div class="chat-actions">
                             <div class="input-trigger">Digite uma mensagem</div>
-                            <div class="responses" style="display: none;">
-                                <div class="response msg msg-out">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
-                                <div class="response msg msg-out">Amet vero odio fugiat labore! Nisi nemo repellendus</div>
-                                <div class="response msg msg-out">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
-                                <div class="response msg msg-out">Voluptas sed repudiandae officiis</div>
-                                <div class="response msg msg-out">Amet vero odio fugiat labore! Nisi nemo repellendus</div>
-                            </div>
+                            <div class="responses" style="display: none;"></div>
                         </div>
                     </div>
                     <div class="img-overlay area" style="display: none;">
