Record actions and game save

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             
                         </div>
                         <div class="chat-actions">
-                            <div class="input-trigger">Digite uma mensagem</div>
+                            <div class="input-trigger disabled">Digite uma mensagem</div>
                             <div class="responses" style="display: none;"></div>
                         </div>
                     </div>
