Audio (OK) + Undo edge cases (OK)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                                 <span class="chat-name">Roberto Luis Tio</span>
                             </div>
                             <div class="right">
-                                <i title="Desfazer ação" class="fa fa-backward btn-undo"></i>
+                                <i title="Desfazer ação" class="fa fa-backward btn-undo disabled"></i>
                             </div>
                         </div>
                         <div class="chat-box">
