Adds configs tab. Restart game and fast mode support

--- a/index.html
+++ b/index.html
@@ -21,15 +21,26 @@
                         <div class="chat-header">
                             <div class="left">
                                 <img class="chat-img" src="/img/perfil.jpg">
-                                <span class="chat-name">Roberto Luis Tio</span>
+                                <span class="chat-name">Tio Roberto</span>
                             </div>
                             <div class="right">
-                                <i title="Desfazer ação" class="fa fa-backward btn-undo disabled"></i>
+                                <i title="Desfazer ação" class="fa fa-backward _btn btn-undo disabled"></i>
+                                <i title="Configurações" class="fa fa-ellipsis-v _btn btn-configs"></i>
+                            </div>
+                        </div>
+                        <div class="configs">
+                            <div class="_btn-large btn-debug enabled">
+                                <i class="fa fa-forward"></i>
+                                Modo rápido: <span class="flag">desativado</span>
+                            </div>
+                            <div class="_btn-large btn-restart">
+                                <i class="fa fa-skull-crossbones"></i>
+                                Recomeçar o jogo
                             </div>
                         </div>
                         <div class="chat-box"></div>
                         <div class="chat-actions">
-                            <div class="input-trigger disabled">Digite uma mensagem</div>
+                            <div class="input-trigger _btn-large disabled">Digite uma mensagem</div>
                             <div class="responses" style="display: none;"></div>
                         </div>
                     </div>
