--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zap</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aladin&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -13,39 +17,56 @@
 
     <div id="app">
 
-        <div class="wrapper">
-            <div class="cellphone">
-                <div class="screen">
-                    <!-- <div class="shine area"></div> -->
-                    <div class="chat area">
-                        <div class="chat-header">
-                            <div class="left">
-                                <img class="chat-img" src="/img/perfil.jpg">
-                                <span class="chat-name">Tio Roberto</span>
+        <div class="environment current" id="main-menu">
+            <div class="main-menu centralized-wrapper">
+                <h1 class="title">Vamos chegar antes deles</h1>
+                <div class="description">Você e seu tio ao resgate da cura do câncer</div>
+                <div class="_btn-large btn-start mt-3">
+                    <i class="fa fa-play me-2"></i>
+                    Jogar
+                </div>
+            </div>
+        </div>
+
+        <div class="environment" id="game">
+            <div class="centralized-wrapper">
+                <div class="cellphone">
+                    <div class="screen">
+                        <div class="shine area"></div>
+                        <div class="chat area">
+                            <div class="chat-header">
+                                <div class="left">
+                                    <img class="chat-img" src="/img/perfil.jpg">
+                                    <span class="chat-name">Tio Roberto</span>
+                                </div>
+                                <div class="right">
+                                    <i title="Desfazer ação" class="fa fa-backward _btn btn-undo disabled"></i>
+                                    <i title="Configurações" class="fa fa-ellipsis-v _btn btn-configs"></i>
+                                </div>
                             </div>
-                            <div class="right">
-                                <i title="Desfazer ação" class="fa fa-backward _btn btn-undo disabled"></i>
-                                <i title="Configurações" class="fa fa-ellipsis-v _btn btn-configs"></i>
+                            <div class="configs">
+                                <div class="info">
+                                    <i class="fa fa-info-circle"></i>
+                                    Seu progresso é salvo automaticamente nesse dispositivo.
+                                </div>
+                                <div class="_btn-large btn-debug enabled">
+                                    <i class="fa fa-forward"></i>
+                                    Modo rápido: <span class="flag">desativado</span>
+                                </div>
+                                <div class="_btn-large btn-restart">
+                                    <i class="fa fa-skull-crossbones"></i>
+                                    Recomeçar o jogo
+                                </div>
+                            </div>
+                            <div class="chat-box"></div>
+                            <div class="chat-actions">
+                                <div class="input-trigger _btn-large disabled">Digite uma mensagem</div>
+                                <div class="responses" style="display: none;"></div>
                             </div>
                         </div>
-                        <div class="configs">
-                            <div class="_btn-large btn-debug enabled">
-                                <i class="fa fa-forward"></i>
-                                Modo rápido: <span class="flag">desativado</span>
-                            </div>
-                            <div class="_btn-large btn-restart">
-                                <i class="fa fa-skull-crossbones"></i>
-                                Recomeçar o jogo
-                            </div>
+                        <div class="img-overlay area" style="display: none;">
+                            <img>
                         </div>
-                        <div class="chat-box"></div>
-                        <div class="chat-actions">
-                            <div class="input-trigger _btn-large disabled">Digite uma mensagem</div>
-                            <div class="responses" style="display: none;"></div>
-                        </div>
-                    </div>
-                    <div class="img-overlay area" style="display: none;">
-                        <img>
                     </div>
                 </div>
             </div>
