--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
             </div>
         </div>
 
+        <div class="environment" id="map">
+            <div class="centralized-wrapper">
+                <img src="./img/mapa.png">
+                <div class="map-options">
+                    <div class="btn-close-map _btn-large">
+                        <i class="fa fa-arrow-left me-2"></i>Voltar
+                    </div>
+                    <a class="_btn-large" target="_blank" href="./img/mapa.png">
+                        <i class="fa fa-external-link me-2"></i>Abrir em outra aba
+                    </a>   
+                </div>
+            </div>
+        </div>
+
         <div class="environment" id="game">
             <div class="centralized-wrapper">
                 <div class="cellphone">
@@ -60,7 +74,10 @@
                             </div>
                             <div class="chat-box"></div>
                             <div class="chat-actions">
-                                <div class="input-trigger _btn-large disabled">Digite uma mensagem</div>
+                                <div class="actions">
+                                    <i title="Mapa" class="btn-map _btn fa-regular fa-map"></i>
+                                    <div class="input-trigger _btn-large disabled">Digite uma mensagem</div>
+                                </div>
                                 <div class="responses" style="display: none;"></div>
                             </div>
                         </div>
