[FIX] Game restart

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div id="app">
 
-        <div class="environment current" id="main-menu">
+        <div class="environment" id="main-menu">
             <div class="main-menu centralized-wrapper">
                 <h1 class="title">Vamos chegar antes deles</h1>
                 <div class="description">Você e seu tio ao resgate da cura do câncer</div>
@@ -42,9 +42,10 @@
             </div>
         </div>
 
-        <div class="environment" id="game">
+        <div class="environment current" id="game">
             <div class="centralized-wrapper">
-                <div class="cellphone">
+                <!-- <div class="cellphone locked"> -->
+                <div class="cellphone up on">
                     <div class="screen">
                         <div class="shine area"></div>
                         <div class="chat area">
